--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
     "@types/node": "^22.9.1",
     "drizzle-kit": "^0.28.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "axios": "^1.7.7",
     "drizzle-orm": "^0.36.4",
     "fastify": "^5.1.0",
+    "fastify-type-provider-zod": "^4.0.2",
     "postgres": "^3.4.5",
     "zod": "^3.23.8"
   }
