--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,26 @@ services:
         condition: service_healthy
     environment:
       - DATABASE_URL=postgresql://docker:docker@db:5432/shopper
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     command: >
       sh -c "
       npm run build &&
       npm run seed &&
       npm run dev
       "
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - '80:80'
+    depends_on:
+      backend:
+        condition: service_healthy
+    environment:
+      - VITE_API_URL=http://backend:8080
