--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "axios": "^1.7.7",
     "drizzle-orm": "^0.36.4",
