--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
         condition: service_healthy
     environment:
       - DATABASE_URL=postgresql://docker:docker@db:5432/shopper
+      - GOOGLE_API_KEY=AIzaSyBNqFYLwQ6UN3rqWvaYP47urJvSOde_0UE
+      - PORT=8080
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8080/health || exit 1"]
       interval: 10s
@@ -51,3 +53,4 @@ services:
         condition: service_healthy
     environment:
       - VITE_API_URL=http://backend:8080
+      - GOOGLE_API_KEY=AIzaSyBNqFYLwQ6UN3rqWvaYP47urJvSOde_0UE
