--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/http/server.ts",
+    "dev": "tsx watch src/http/server.ts",
     "build": "npx drizzle-kit generate && npx drizzle-kit migrate",
-    "seed": "tsx --env-file .env src/db/seed.ts"
+    "seed": "tsx src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
